--- a/frontend/src/components/style.css
+++ b/frontend/src/components/style.css
@@ -44,9 +44,9 @@
 .custom-pagination {
   font-size: 16px;
 }
-.disabled-container {
+.dc {
   pointer-events: none;
-  opacity: 0.6;
+  opacity: 0.3;
 }
 
 @media (max-width: 576px) {
